crates/native/tests/snapshots/parser_tests__query_with_directives.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(\"query GetUser($withEmail: Boolean!) { user { id name email @include(if: $withEmail) } }\")"
---
Document {
    source: Source {
        code: "query GetUser($withEmail: Boolean!) { user { id name email @include(if: $withEmail) } }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 0,
                        end: 87,
                    },
                    operation_type: Query,
                    name: Some(
                        Name(
                            "GetUser",
                        ),
                    ),
                    variable_definitions: [
                        VariableDefinition {
                            span: Span {
                                start: 14,
                                end: 35,
                            },
                            variable: VariableName(
                                Name(
                                    "withEmail",
                                ),
                            ),
                            typ: NonNull(
                                Named(
                                    NamedType {
                                        name: TypeName(
                                            Name(
                                                "Boolean",
                                            ),
                                        ),
                                    },
                                ),
                            ),
                            default_value: None,
                            directives: [],
                        },
                    ],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 38,
                                        end: 85,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "user",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [
                                            Field(
                                                Field {
                                                    span: Span {
                                                        start: 45,
                                                        end: 52,
                                                    },
                                                    alias: None,
                                                    name: FieldName(
                                                        Name(
                                                            "id",
                                                        ),
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                    selection_set: SelectionSet {
                                                        selections: [],
                                                    },
                                                },
                                            ),
                                            Field(
                                                Field {
                                                    span: Span {
                                                        start: 48,
                                                        end: 58,
                                                    },
                                                    alias: None,
                                                    name: FieldName(
                                                        Name(
                                                            "name",
                                                        ),
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                    selection_set: SelectionSet {
                                                        selections: [],
                                                    },
                                                },
                                            ),
                                            Field(
                                                Field {
                                                    span: Span {
                                                        start: 53,
                                                        end: 85,
                                                    },
                                                    alias: None,
                                                    name: FieldName(
                                                        Name(
                                                            "email",
                                                        ),
                                                    ),
                                                    arguments: [],
                                                    directives: [
                                                        Directive {
                                                            span: Span {
                                                                start: 59,
                                                                end: 83,
                                                            },
                                                            name: DirectiveName(
                                                                Name(
                                                                    "include",
                                                                ),
                                                            ),
                                                            arguments: [
                                                                Argument {
                                                                    span: Span {
                                                                        start: 68,
                                                                        end: 82,
                                                                    },
                                                                    name: ArgumentName(
                                                                        Name(
                                                                            "if",
                                                                        ),
                                                                    ),
                                                                    value: Variable(
                                                                        Name(
                                                                            "withEmail",
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                        },
                                                    ],
                                                    selection_set: SelectionSet {
                                                        selections: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
