crates/native/tests/snapshots/parser_tests__query_with_fragment.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(\"query { user { ...UserFields } } fragment UserFields on User { id name email }\")"
---
Document {
    source: Source {
        code: "query { user { ...UserFields } } fragment UserFields on User { id name email }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 0,
                        end: 32,
                    },
                    operation_type: Query,
                    name: None,
                    variable_definitions: [],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 8,
                                        end: 30,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "user",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [
                                            FragmentSpread(
                                                FragmentSpread {
                                                    span: Span {
                                                        start: 15,
                                                        end: 30,
                                                    },
                                                    fragment_name: FragmentName(
                                                        Name(
                                                            "UserFields",
                                                        ),
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
        Executable(
            Fragment(
                FragmentDefinition {
                    span: Span {
                        start: 33,
                        end: 78,
                    },
                    name: FragmentName(
                        Name(
                            "UserFields",
                        ),
                    ),
                    variable_definitions: [],
                    type_condition: TypeName(
                        Name(
                            "User",
                        ),
                    ),
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 63,
                                        end: 70,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "id",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                            Field(
                                Field {
                                    span: Span {
                                        start: 66,
                                        end: 76,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "name",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                            Field(
                                Field {
                                    span: Span {
                                        start: 71,
                                        end: 78,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "email",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
