crates/native/tests/snapshots/parser_tests__query_with_fragment_spread.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(r#\"query { user { ...UserFields } }\n        fragment UserFields on User { id name }\"#)"
---
Document {
    source: Source {
        code: "query { user { ...UserFields } }\n        fragment UserFields on User { id name }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 0,
                        end: 32,
                    },
                    operation_type: Query,
                    name: None,
                    variable_definitions: [],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 8,
                                        end: 30,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "user",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [
                                            FragmentSpread(
                                                FragmentSpread {
                                                    span: Span {
                                                        start: 15,
                                                        end: 30,
                                                    },
                                                    fragment_name: FragmentName(
                                                        Name(
                                                            "UserFields",
                                                        ),
                                                    ),
                                                    directives: [],
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
        Executable(
            Fragment(
                FragmentDefinition {
                    span: Span {
                        start: 41,
                        end: 80,
                    },
                    name: FragmentName(
                        Name(
                            "UserFields",
                        ),
                    ),
                    type_condition: TypeName(
                        Name(
                            "User",
                        ),
                    ),
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 71,
                                        end: 78,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "id",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                            Field(
                                Field {
                                    span: Span {
                                        start: 74,
                                        end: 80,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "name",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
